--- a/htdocs/bio.html
+++ b/htdocs/bio.html
@@ -81,7 +81,7 @@
 				<a class="btn btn-default btn-icon" href="//linkedin.com/in/willdayble" target="_blank"><i class="ss-social ss-linkedin"></i></a>
 <!-- 				<a class="btn btn-default btn-icon" href="//facebook.com/willdayble" target="_blank"><i class="ss-social ss-facebook s"></i></a> -->
 				<a class="btn btn-default btn-home" href="/">Home</a>
-				<a class="btn btn-default" href="services">Services</a>
+				<a class="btn btn-default" href="speaking">Speaking</a>
 				<a class="btn btn-default btn-cta" href="#contact">Contact</a>
 			</div>
 		</nav>
