--- a/htdocs/bio.html
+++ b/htdocs/bio.html
@@ -96,9 +96,9 @@
 
 <article class="reverse red" id="truth">
 	<div class="constrain">
-		<h2>Geek turned social entrepreneur.</h2>
+		<h2>Geek turned teacher</h2>
 		<p>Will&rsquo;s background is digital and entrepreneurial, having founded multiple businesses across tech, social enterprise, hospitality, teaching, and impact measurement.</p>
-		<p>In high school, he was presented with the &lsquo;rebel without a cause&rsquo; award by the staff.</p>
+		<p>In high school, he was presented with a &lsquo;rebel without a cause&rsquo; award, after barely scraping through VCE.</p>
 
 		<p>These days, Will delivers keynotes and masterclasses on disruption, innovation and digital strategy with Fortune 500s, the social sector and the startup world. He sits on a few boards and reads lots of science fiction.</p>
 		<p>Will has written, delivered and examined full university courses, and speaks at various education, digital and entrepreneurial events.</p>
