--- a/htdocs/bio.html
+++ b/htdocs/bio.html
@@ -102,7 +102,7 @@
 
 		<p>These days, Will delivers keynotes and masterclasses on disruption, innovation and digital strategy with Fortune 500s, the social sector and the startup world. He sits on a few boards and reads lots of science fiction.</p>
 		<p>Will has written, delivered and examined full university courses, and speaks at various education, digital and entrepreneurial events.</p>
-
+		<p>He&rsquo;s passionate about measuring impact, breaking dumb systems, diversity within digital and supporting the Australian social startup economy.</p>
 		<p>In his spare time he doesn&rsquo;t have any.</p>
 		<hr>
 		<p>Will co-founded these things:</p>
