--- a/htdocs/bio.html
+++ b/htdocs/bio.html
@@ -97,13 +97,15 @@
 <article class="reverse red" id="truth">
 	<div class="constrain">
 		<h2>Geek turned teacher</h2>
-		<p>Will&rsquo;s background is digital and entrepreneurial, having founded multiple businesses across tech, social enterprise, hospitality, teaching, and impact measurement.</p>
-		<p>In high school, he was presented with a &lsquo;rebel without a cause&rsquo; award, after barely scraping through VCE.</p>
-
-		<p>These days, Will delivers keynotes and masterclasses on disruption, innovation and digital strategy with Fortune 500s, the social sector and the startup world. He sits on a few boards and reads lots of science fiction.</p>
-		<p>Will has written, delivered and examined full university courses, and speaks at various education, digital and entrepreneurial events.</p>
-		<p>He&rsquo;s passionate about measuring impact, breaking dumb systems, diversity within digital and supporting the Australian social startup economy.</p>
-		<p>In his spare time he doesn&rsquo;t have any.</p>
+		<h3>My background is digital and entrepreneurial, my work is in social impact.</h3>
+		<p>I’ve founded businesses and social enterprises across various verticals. In a leadership capacity I bring compassion, clarity and purpose.</p>
+		<p>My passions lie in teaching, design and technology. I live in Carlton with my partner (a neuroscience researcher) and two cats (who are not neuroscientists), where I read lots of science fiction and drink lots of coffee.</p>
+		<p>In high school, I was presented with a &lsquo;rebel without a cause&rsquo; award, after barely scraping through VCE.</p>		
+		<p>These days, I delivers keynotes on disruption, innovation and digital with big companies, the social sector and the startup world. I sit on a few boards.</p>
+		<p>I’ve written, delivered and examined full university courses, and love speaking at various education, digital and entrepreneurial events.</p>
+		<p>In my spare time I don&rsquo;t have any.</p>
+		
+		
 		<hr>
 		<p>Will co-founded these things:</p>
 		<dl>
@@ -113,7 +115,7 @@
 			<dt>4</dt><dd><a href="http://fitzroygsd.com/">The Fitzroy Academy of Getting Shit Done</a>, where we teach people to build things that don&rsquo;t  exist yet.</dd>
 		</dl>		
 
-		<h3>Hi-res picture</h3>
+		<h3>Hi-res pictures</h3>
 		<p>Click for a hi res copy:</p>
 		<p><a class="sizeimg" target="_blank" href="design/images/bio/will-dayble-hires.jpg"><img class="" src="design/images/bio/will-dayble.jpg" alt="will-dayble"></a></p>	
 		<p><a class="sizeimg" target="_blank" href="design/images/bio/will-dayble-headshot.jpg"><img class="" src="design/images/bio/will-dayble-headshot.jpg" alt="will-dayble"></a></p>				
