--- a/htdocs/bio.html
+++ b/htdocs/bio.html
@@ -115,10 +115,11 @@
 			<dt>4</dt><dd><a href="http://fitzroygsd.com/">The Fitzroy Academy of Getting Shit Done</a>, where we teach people to build things that don&rsquo;t  exist yet.</dd>
 		</dl>		
 
-		<h3>Hi-res pictures</h3>
-		<p>Click for a hi res copy:</p>
-		<p><a class="sizeimg" target="_blank" href="design/images/bio/will-dayble-hires.jpg"><img class="" src="design/images/bio/will-dayble.jpg" alt="will-dayble"></a></p>	
-		<p><a class="sizeimg" target="_blank" href="design/images/bio/will-dayble-headshot.jpg"><img class="" src="design/images/bio/will-dayble-headshot.jpg" alt="will-dayble"></a></p>				
+		<h3>Pictures</h3>
+		<p>Click for hi res:</p>
+		<p>
+			<a class="sizeimg" target="_blank" href="design/images/bio/will-dayble-hires.jpg"><img class="" src="design/images/bio/will-dayble.jpg" alt="will-dayble"></a>
+		<a class="sizeimg" target="_blank" href="design/images/bio/will-dayble-headshot.jpg"><img class="" src="design/images/bio/will-dayble-headshot.jpg" alt="will-dayble"></a></p>				
 	</div>
 </article>
 
